--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="io.github.imruahmed.opti.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/add_trip_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="@string/add_trip" />
 </RelativeLayout>
