--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,6 +1,6 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
@@ -17,6 +17,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:elevation="4dp"
+        android:src="@drawable/ic_add_white_24dp"
         android:layout_gravity="bottom|right"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"/>
@@ -26,8 +27,10 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:elevation="4dp"
+        android:src="@drawable/ic_check_white_24dp"
         android:layout_gravity="bottom|right"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="90dp" />
+        android:layout_marginBottom="90dp"
+        app:backgroundTint="@color/colorPrimary"/>
 
 </FrameLayout>
